--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.png" alt="Debadrita profile-pic">
+            <img src="./assets/pic1.png" alt="Debadrita profile-pic">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -60,7 +60,7 @@
         </div>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/about-pic.png" alt="Profile Picture" class="about-pic"/>
+                <img src="./assets/pic2.png" alt="Profile Picture" class="about-pic"/>
             </div>
             <div class="about-details-container">
                 <div class="about-container">
@@ -77,7 +77,7 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam odio nihil asperiores impedit, molestiae, eum soluta voluptatem nemo architecto quis, vel repudiandae ab doloribus? Aliquam, modi. Molestiae sint eum suscipit?
+                        Third-year Computer Science Engineering student with a foundation in programming, problem-solving, and creative design. Actively seeking internship and job opportunities in web development, software development, UI/UX design, or graphic design. Eager to contribute to innovative projects, learn from industry professionals, and expand my skill set in real-world environments. Known for being a fast learner, team player, and detail-oriented individual with a proactive approach to challenges.
                     </p>
                 </div>
             </div>
