--- a/index.html
+++ b/index.html
@@ -200,22 +200,14 @@
     <div class="project-card">
       <img src="./assets/estate.jpg" alt="Project 1 Screenshot" class="project-img">
       <h3>Real Estate Website</h3>
-      <p>A React-based weather app using OpenWeatherMap API to show real-time forecasts.</p>
+      <p>A React-based Real-Estate-Platform to browse, sell or represent properties.</p>
       <div class="project-links">
         <a href="https://github.com/mimivrro/real-estate-platform" target="_blank">GitHub</a>
         <a href="https://yourweatherapp.netlify.app" target="_blank">Live Demo</a>
       </div>
     </div>
 
-    <div class="project-card">
-      <img src="./assets/project2.png" alt="Project 2 Screenshot" class="project-img">
-      <h3>Todo List</h3>
-      <p>A simple todo app with add/edit/delete functionality, built using JavaScript.</p>
-      <div class="project-links">
-        <a href="https://github.com/yourusername/todo-app" target="_blank">GitHub</a>
-        <a href="https://yourtodoapp.netlify.app" target="_blank">Live Demo</a>
-      </div>
-    </div>
+
 
     <div class="project-card">
       <img src="./assets/site.jpg" alt="Project 3 Screenshot" class="project-img">
